tests/ui/impl-trait/in-trait/missing-type-parameter.current.stderr
error: cannot check whether the hidden type of opaque type satisfies auto traits
  --> $DIR/missing-type-parameter.rs:9:17
   |
LL |     fn bar() -> Wrapper<impl Sized>;
   |                 ^^^^^^^^^^^^^^^^^^^
   |
note: opaque type is declared here
  --> $DIR/missing-type-parameter.rs:9:25
   |
LL |     fn bar() -> Wrapper<impl Sized>;
   |                         ^^^^^^^^^^
note: required by a bound in `Wrapper`
  --> $DIR/missing-type-parameter.rs:6:19
   |
LL | struct Wrapper<G: Send>(G);
   |                   ^^^^ required by this bound in `Wrapper`

error: aborting due to previous error

